src/test/resources/integration-test/bad-imports/not-at-top.expect

An error occurred:
not-at-top.twl
Error at line 5 character 1.
Cannot import here, all imports must be first.
