src/test/resources/integration-test/bad-imports/not-at-top.twl
import println from <io>

1 let test

import <maths>